--- a/desafios/Desafio modulo03/estilo/style.css
+++ b/desafios/Desafio modulo03/estilo/style.css
@@ -1,1 +1,67 @@
-@charset "UTF-8"
+@charset "UTF-8";
+
+*{margin: 0px;
+padding: 0px;}
+
+html, body{ background-color: darkseagreen;
+    min-height: 100vh;   
+
+}
+
+header{ background-color: black;
+color: white;
+text-align: center;
+}
+
+header > h1{
+    padding-top: 50px;
+    text-transform: uppercase; /* ou font-variant: small-caps;*/
+
+}
+
+header > p {
+    padding-bottom: 50px;
+
+}
+
+header a, footer a { color: white;
+    text-decoration: none;
+    font-weight: bolder;
+
+}
+header a:hover, footer a:hover { text-decoration: underline;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+section.normal{
+    background-color: aliceblue;
+    color: black;
+}
+
+section.imagem{
+background-color: rgba(0, 0, 0, 0.548);
+color: azure;
+
+}
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.185);
+    width: 400px;
+
+}
+
+footer{
+    background-color: black;
+    color: aliceblue;
+    text-align: center;
+    padding: 10px;
+}
+
+
+
+
