--- a/desafios/Desafio modulo03/estilo/style.css
+++ b/desafios/Desafio modulo03/estilo/style.css
@@ -34,6 +34,7 @@ header > h1{
 
 header > p {
     padding-bottom: 50px;
+    padding-bottom: 1em;
 
 }
 
@@ -61,6 +62,8 @@ section.normal{
 section.imagem{
 background-color: rgba(0, 0, 0, 0.548);
 color: azure;
+box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
+background-attachment: fixed;
 
 }
 section.imagem > p{
@@ -68,6 +71,19 @@ section.imagem > p{
     width: 400px;
     display: inline-block;
     padding: 4px;
+}
+
+section#img01{
+background-image:url(../imagens/background001.jpg) ;
+background-position: right center;
+background-size: cover;
+}
+
+section#img02{
+background-image: url(../imagens/background002.jpg);
+background-size: cover;
+background-position: left center;
+
 }
 
 footer{
